Implement three-panel NotebookLM-style interface with database schema

--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "webapp",
+  "name": "tls-ediscovery",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:sandbox": "wrangler pages dev dist --d1=tls-ediscovery-production --local --ip 0.0.0.0 --port 3000",
     "build": "vite build",
-    "preview": "wrangler pages dev",
-    "deploy": "npm run build && wrangler pages deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "preview": "wrangler pages dev dist",
+    "deploy": "npm run build && wrangler pages deploy dist",
+    "deploy:prod": "npm run build && wrangler pages deploy dist --project-name tls-ediscovery",
+    "cf-typegen": "wrangler types --env-interface CloudflareBindings",
+    "db:migrate:local": "wrangler d1 migrations apply tls-ediscovery-production --local",
+    "db:migrate:prod": "wrangler d1 migrations apply tls-ediscovery-production",
+    "db:console:local": "wrangler d1 execute tls-ediscovery-production --local",
+    "db:console:prod": "wrangler d1 execute tls-ediscovery-production",
+    "clean-port": "fuser -k 3000/tcp 2>/dev/null || true"
   },
   "dependencies": {
     "hono": "^4.10.4"
@@ -14,6 +21,8 @@
   "devDependencies": {
     "@hono/vite-build": "^1.2.0",
     "@hono/vite-dev-server": "^0.18.2",
+    "@cloudflare/workers-types": "^4.20250705.0",
+    "typescript": "^5.0.0",
     "vite": "^6.3.5",
     "wrangler": "^4.4.0"
   }
