Configure production deployment with D1 database and R2 bucket
- Add D1 database: tls-ediscovery-database (ddfaefee-f71c-47c8-b729-de7c2ffedc65)
- Add R2 bucket: tlsediscoverydata
- Production URL: https://c9ce2d57.tls-ediscovery.pages.dev
- ANTHROPIC_API_KEY secret configured
- Database fully initialized with VitaQuest matter and classifications

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,15 +9,14 @@
   "r2_buckets": [
     {
       "binding": "DOCUMENTS",
-      "bucket_name": "tls-ediscovery-documents"
+      "bucket_name": "tlsediscoverydata"
     }
   ],
   "d1_databases": [
     {
       "binding": "DB",
-      "database_name": "tls-ediscovery-production",
-      "database_id": "",
-      "migrations_dir": "migrations"
+      "database_name": "tls-ediscovery-database",
+      "database_id": "ddfaefee-f71c-47c8-b729-de7c2ffedc65"
     }
   ]
 }
