--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "clean-port": "fuser -k 3000/tcp 2>/dev/null || true"
   },
   "dependencies": {
+    "@google/genai": "^1.29.0",
     "hono": "^4.10.4"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250705.0",
     "@hono/vite-build": "^1.2.0",
     "@hono/vite-dev-server": "^0.18.2",
-    "@cloudflare/workers-types": "^4.20250705.0",
     "typescript": "^5.0.0",
     "vite": "^6.3.5",
     "wrangler": "^4.4.0"
